Added main.js file, Got walruses to pop up using console, added animation styling

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 
     <div class="container-lg container-fluid game-container">
       <div class="row game-row">
-        <div class="col">
-        </div>
+        <div class="col"></div>
       </div>
 
       <div class="row game-row">
@@ -44,19 +43,29 @@
           <div class="walrus"></div>
         </div>
         <div class="col hole hole-2">
-        <div class="walrus"></div>
+          <div class="walrus"></div>
         </div>
-      </div>
-    
-      <div class="row game-row">
-        <div class="col-3 hole hole-3"></div>
-        <div class="col-6 hole hole-4"></div>
-        <div class="col-3 hole hole-5"></div>
       </div>
 
       <div class="row game-row">
-        <div class="col hole hole-6"></div>
-        <div class="col hole hole-7"></div>
+        <div class="col-3 hole hole-3">
+        <div class="walrus"></div>
+        </div>
+        <div class="col-6 hole hole-4">
+        <div class="walrus"></div>
+        </div>
+        <div class="col-3 hole hole-5">
+        <div class="walrus"></div>
+        </div>
+      </div>
+
+      <div class="row game-row">
+        <div class="col hole hole-6">
+        <div class="walrus"></div>
+        </div>
+        <div class="col hole hole-7">
+        <div class="walrus"></div>
+        </div>
       </div>
     </div>
 
@@ -79,5 +88,6 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
+    <script src="assets/main.js"></script>
   </body>
 </html>
