--- a/index.html
+++ b/index.html
@@ -23,6 +23,27 @@
   </head>
 
   <body>
+    <div class="card-info">
+      <h2 class="header-info text-center">Welcome To Mount Belinda</h2>
+      
+      <p class="text-center">
+      <img class="penguin penguin-left" src="assets/images/penguin-wave.png" alt="Penguin waving">
+      <img class="penguin penguin-right" src="assets/images/penguin-wave.png" alt="Penguin waving">
+        <span class="line-break">You are Jingle Knightley,</span>
+        <span class="line-break">The bravest penguin in the South Sandwich Islands.</span>
+        <span class="line-break">Your colony is under attack from a herd of hungry walruses</span>
+        <span class="line-break">Attacking from a secret lair</span>
+        <span class="line-break">You are your colonies only line of defence!!</span>
+        <span class="line-break">Good Luck!</span>
+      </p>
+
+      <div class="btn-container text-center">
+      <button class="btn btn-primary btn-lg btn-game" onclick="startGame()">Start</button>
+      <button class="btn btn-primary btn-lg btn-game">Leaderboard</button>
+      </div>
+
+    </div>
+
     <div class="container-lg container-fluid header-container">
       <h1 class="header-main text-center">
         Wh<span class="blue">a</span>ck <span class="blue">A</span> W<span
@@ -34,12 +55,12 @@
       <div class="row">
         <div class="col info-box time">
           Time:
-          <div class="box text-center">20</div>
+          <div class="box text-center countdown">20</div>
         </div>
         <div class="col-6 blank"></div>
         <div class="col info-box score">
           Score:
-          <div class="box text-center">0</div>
+          <div class="box text-center scoreboard">0</div>
         </div>
       </div>
     </div>
@@ -80,7 +101,7 @@
     </div>
 
     <footer>
-      <a href="https://www.facebook.com/groups/ThePenguinArmy">
+      <a href="https://www.facebook.com/PenguPengu">
         <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i
       ></a>
       <a href="https://twitter.com/WorldPenguinDay">
