Medals images changed, Walrus whacking issue resolved and scoreboard counter implemented

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </tbody>
       </table>
       <div class="btn-container text-center">
-        <button class="btn btn-primary btn-lg btn-game" onclick="backToStart()">
+        <button id="btn-back" class="btn btn-primary btn-lg btn-game">
           Back
         </button>
       </div>
@@ -100,7 +100,7 @@
         <button id="btn-start" class="btn btn-primary btn-lg btn-game">
           Start
         </button>
-        <button id="btn-leaderboard" class="btn btn-primary btn-lg btn-game" onclick="leaderboard()">
+        <button id="btn-leaderboard" class="btn btn-primary btn-lg btn-game">
           Leaderboard
         </button>
       </div>
@@ -191,6 +191,6 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
-    <script src="assets/main.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
