Snow on leaderboard resolved, Responsiveness on some devices amended

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
         </tbody>
       </table>
       <div class="btn-container text-center">
-        <button id="btn-back" class="btn btn-primary btn-lg btn-game">
+        <button id="btn-back" class="btn btn-primary btn-md btn-game">
           Back
         </button>
       </div>
     </div>
     
     <div class="card-info card-start">
-      <h2 class="header-info text-center">Welcome To Mount Belinda</h2>
+      <h2 class="header-info text-center"><span class="break">Welcome</span> <span class="break">To</span> <span class="break">Mount Belinda</span></h2>
 
       <p class="story text-center">
         <img
@@ -78,7 +78,7 @@
           alt="Penguin waving"
         />
         <img
-          class="penguin penguin-right"
+          class="penguin penguin-right d-none d-md-inline-block"
           src="assets/images/penguin-wave.png"
           alt="Penguin waving"
         />
@@ -97,10 +97,10 @@
       </p>
 
       <div class="btn-container text-center">
-        <button id="btn-start" class="btn btn-primary btn-lg btn-game">
+        <button id="btn-start" class="btn btn-primary btn-md btn-game">
           Start
         </button>
-        <button id="btn-leaderboard" class="btn btn-primary btn-lg btn-game">
+        <button id="btn-leaderboard" class="btn btn-primary btn-md btn-game">
           Leaderboard
         </button>
       </div>
