Readme updated, local storage printing to leaderboard(after a game is played), audio fo whack added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           >
         </p>
       </div>
-      <form action="" method="post">
+      <form method="post">
         <label for="highscore-name"></label>
         <input
           type="text"
@@ -222,6 +222,8 @@
         <i class="fa fa-gamepad fa-2x" aria-hidden="true"></i
       ></a>
     </footer>
+
+    <audio src="assets/audio/Hit-6.wav" class="whack"></audio>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
