--- a/index.html
+++ b/index.html
@@ -1,47 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
-    />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png" />
-    
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
-    />
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png" />
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png" />
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png" />
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
-    <title>Whack A Walrus</title>
-  </head>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+		integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
 
-  <body>
-    <div class="card-info highscore text-center game-on">
-      <div>
-        <p>
-          Congragulations you defended the colony!!<span class="line-break"
-            >See if you got a highscore</span
-          >
-        </p>
-      </div>
-      <form method="post">
-        <label for="highscore-name"></label>
-        <input
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+		integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+
+	<title>Whack A Walrus</title>
+</head>
+
+<body>
+	<div class="card-info highscore text-center game-on">
+		<div>
+			<p>
+				Congragulations you defended the colony!!<span class="line-break"
+            >See if you got a highscore</span>
+			</p>
+		</div>
+		<form name="leader" method="post" onsubmit="return formValue()" repuired>
+			<label for="highscore-name"></label>
+			<input
           type="text"
           name="name"
           id="highscore-name"
@@ -49,197 +38,184 @@
           placeholder="Name"
         />
       </form>
-      <div class="btn-container text-center">
-        <button type="submit" id="save-score" class="btn btn-md btn-game">
+			<div class="btn-container text-center">
+				<button type="submit" id="save-score" class="btn btn-md btn-game">
           Submit
         </button>
-        <button id="btn-play-again" class="btn btn-md btn-game">
+				<button id="btn-play-again" class="btn btn-md btn-game">
           Play Again
         </button>
-      </div>
-    </div>
+			</div>
+	</div>
 
-    <div class="card-info card-board game-on">
-      <h2 class="header-info text-center">LeaderBoard</h2>
-      <table class="table table-striped leaderboard text-center">
-        <thead>
-          <tr>
-            <th scope="col">Ranking</th>
-            <th scope="col">Name</th>
-            <th scope="col">Score</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">
-              <img src="assets/images/gold.png" alt="1" />
+	<div class="card-info card-board game-on">
+		<h2 class="header-info text-center">LeaderBoard</h2>
+		<table class="table table-striped leaderboard text-center">
+			<thead>
+				<tr>
+					<th scope="col">Ranking</th>
+					<th scope="col">Name</th>
+					<th scope="col">Score</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th scope="row">
+						<img src="assets/images/gold.png" alt="1" />
             </th>
-            <td class="player-name"></td>
-            <td class="player-score"></td>
-          </tr>
-          <tr>
-            <th scope="row">
-              <img src="assets/images/silver.png" alt="2" />
+					<td class="player-name"></td>
+					<td class="player-score"></td>
+				</tr>
+				<tr>
+					<th scope="row">
+						<img src="assets/images/silver.png" alt="2" />
             </th>
-            <td class="player-name"></td>
-            <td class="player-score"></td>
-          </tr>
-          <tr>
-            <th scope="row">
-              <img src="assets/images/bronze.png" alt="3" />
+					<td class="player-name"></td>
+					<td class="player-score"></td>
+				</tr>
+				<tr>
+					<th scope="row">
+						<img src="assets/images/bronze.png" alt="3" />
             </th>
-            <td class="player-name"></td>
-            <td class="player-score"></td>
-          </tr>
-          <tr>
-            <th scope="row">4</th>
-            <td class="player-name"></td>
-            <td class="player-score"></td>
-          </tr>
-          <tr>
-            <th scope="row">5</th>
-            <td class="player-name"></td>
-            <td class="player-score"></td>
-          </tr>
-        </tbody>
-      </table>
-      <div class="btn-container text-center">
-        <button id="btn-back" class="btn btn-md btn-game">
+					<td class="player-name"></td>
+					<td class="player-score"></td>
+				</tr>
+				<tr>
+					<th scope="row">4</th>
+					<td class="player-name"></td>
+					<td class="player-score"></td>
+				</tr>
+				<tr>
+					<th scope="row">5</th>
+					<td class="player-name"></td>
+					<td class="player-score"></td>
+				</tr>
+			</tbody>
+		</table>
+		<div class="btn-container text-center">
+			<button id="btn-back" class="btn btn-md btn-game">
           Back
         </button>
-      </div>
-    </div>
+		</div>
+	</div>
 
-    <div class="card-info card-start">
-      <h2 class="header-info text-center">
-        <span class="break">Welcome</span> <span class="break">To</span>
-        <span class="break">Mount Belinda</span>
-      </h2>
+	<div class="card-info card-start">
+		<h2 class="header-info text-center">
+			<span class="break">Welcome</span> <span class="break">To</span>
+			<span class="break">Mount Belinda</span>
+		</h2>
 
-      <p class="story text-center">
-        <img
+		<p class="story text-center">
+			<img
           class="penguin penguin-left"
           src="assets/images/penguin-wave.png"
           alt="Penguin waving"
         />
-        <img
+			<img
           class="penguin penguin-right d-none d-md-inline-block"
           src="assets/images/penguin-wave.png"
           alt="Penguin waving"
         />
-        <span class="line-break">You are Jingle Knightley</span>
-        <span class="line-break"
-          >The bravest penguin in the South Sandwich Islands</span
-        >
-        <span class="line-break"
-          >Your colony is under attack from a herd of hungry walruses</span
-        >
-        <span class="line-break">Attacking from a secret lair</span>
-        <span class="line-break"
-          >You are your colonies only line of defence!!</span
-        >
-        <span class="line-break">Good Luck!</span>
-      </p>
+			<span class="line-break">You are Jingle Knightley</span>
+			<span class="line-break"
+          >The bravest penguin in the South Sandwich Islands</span>
+			<span class="line-break"
+          >Your colony is under attack from a herd of hungry walruses</span>
+			<span class="line-break">Attacking from a secret lair</span>
+			<span class="line-break"
+          >You are your colonies only line of defence!!</span>
+			<span class="line-break">Good Luck!</span>
+		</p>
 
-      <div class="btn-container text-center">
-        <button id="btn-start" class="btn btn-md btn-game">
+		<div class="btn-container text-center">
+			<button id="btn-start" class="btn btn-md btn-game">
           Start
         </button>
-        <button id="btn-leaderboard" class="btn btn-md btn-game">
+			<button id="btn-leaderboard" class="btn btn-md btn-game">
           Leaderboard
         </button>
-      </div>
-    </div>
+		</div>
+	</div>
 
-    <div class="container-lg container-fluid header-container">
-      <h1 class="header-main text-center">
-        Wh<span class="blue">a</span>ck <span class="blue">A</span> W<span
+	<div class="container-lg container-fluid header-container">
+		<h1 class="header-main text-center">
+			Wh<span class="blue">a</span>ck <span class="blue">A</span> W<span
           class="blue"
-          >a</span
-        >lrus
-      </h1>
+          >a</span>lrus
+		</h1>
 
-      <div class="row">
-        <div class="col info-box time">
-          Time:
-          <div class="box text-center countdown">
-            <span id="time-left">20</span>
-          </div>
-        </div>
-        <div class="col-6 blank"></div>
-        <div class="col info-box score">
-          Score:
-          <div class="box text-center scoreboard">0</div>
-        </div>
-      </div>
-    </div>
+		<div class="row">
+			<div class="col info-box time">
+				Time:
+				<div class="box text-center countdown">
+					<span id="time-left">20</span>
+				</div>
+			</div>
+			<div class="col-6 blank"></div>
+			<div class="col info-box score">
+				Score:
+				<div class="box text-center scoreboard">0</div>
+			</div>
+		</div>
+	</div>
 
-    <div class="container-lg container-fluid game-container">
-      <div class="row game-row">
-        <div class="col"></div>
-      </div>
+	<div class="container-lg container-fluid game-container">
+		<div class="row game-row">
+			<div class="col"></div>
+		</div>
 
-      <div class="row game-row">
-        <div class="hole hole-1">
-          <div class="walrus"></div>
-        </div>
-        <div class="hole hole-2">
-          <div class="walrus"></div>
-        </div>
+		<div class="row game-row">
+			<div class="hole hole-1">
+				<div class="walrus"></div>
+			</div>
+			<div class="hole hole-2">
+				<div class="walrus"></div>
+			</div>
 
-        <div class="hole hole-3">
-          <div class="walrus"></div>
-        </div>
-        <div class="hole hole-4">
-          <div class="walrus"></div>
-        </div>
-        <div class="hole hole-5">
-          <div class="walrus"></div>
-        </div>
+			<div class="hole hole-3">
+				<div class="walrus"></div>
+			</div>
+			<div class="hole hole-4">
+				<div class="walrus"></div>
+			</div>
+			<div class="hole hole-5">
+				<div class="walrus"></div>
+			</div>
 
-        <div class="hole hole-6">
-          <div class="walrus"></div>
-        </div>
-        <div class="hole hole-7">
-          <div class="walrus"></div>
-        </div>
-        <div class="hole hole-8">
-          <div class="walrus"></div>
-        </div>
-      </div>
-    </div>
+			<div class="hole hole-6">
+				<div class="walrus"></div>
+			</div>
+			<div class="hole hole-7">
+				<div class="walrus"></div>
+			</div>
+			<div class="hole hole-8">
+				<div class="walrus"></div>
+			</div>
+		</div>
+	</div>
 
-    <footer>
-      <a href="https://www.facebook.com/PenguPengu">
-        <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i
-      ></a>
-      <a href="https://twitter.com/WorldPenguinDay">
-        <i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i
-      ></a>
-      <a
-        href="https://chrome.google.com/webstore/detail/penguin-games/hpfoajbgmofeockljbjaemmofgdmjdmo?hl=en"
-      >
-        <i class="fa fa-gamepad fa-2x" aria-hidden="true"></i
-      ></a>
-    </footer>
+	<footer>
+		<a href="https://www.facebook.com/PenguPengu" target="_blank">
+			<i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a>
+		<a href="https://twitter.com/WorldPenguinDay" target="_blank">
+			<i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+		<a href="https://chrome.google.com/webstore/detail/penguin-games/hpfoajbgmofeockljbjaemmofgdmjdmo?hl=en"
+			target="_blank">
+			<i class="fa fa-gamepad fa-2x" aria-hidden="true"></i></a>
+	</footer>
 
-    <audio src="assets/audio/Hit-6.wav" class="whack"></audio>
+	<audio src="assets/audio/Hit-6.wav" class="whack"></audio>
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"
-    ></script>
-    <script src="assets/js/main.js"></script>
-  </body>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+		integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+		integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+	</script>
+	<script src="assets/js/main.js"></script>
+</body>
+
 </html>
