Form validation implemented, README.md update

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
           id="highscore-name"
           class="highscore-input"
           placeholder="Name"
+          required
         />
+        <p id="warning"></p>
       </form>
       <div class="btn-container text-center">
         <button
