Incorporate saveHighScore() and formValue() into one function, Edit HTML elements for better semantics

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
   </head>
 
   <body>
-    <div class="card-info highscore text-center game-on">
+    <!-- Highscore Card -->
+    <section class="card-info highscore text-center game-on">
       <div>
         <p>
           Congragulations you defended the colony!!<span class="line-break"
@@ -65,20 +66,17 @@
         <p id="warning"></p>
       </form>
       <div class="btn-container text-center">
-        <button
-          type="submit"
-          id="save-score"
-          class="btn btn-md btn-game"
-        >
+        <button type="submit" id="save-score" class="btn btn-md btn-game">
           Submit
         </button>
         <button id="btn-play-again" class="btn btn-md btn-game">
           Play Again
         </button>
       </div>
-    </div>
+    </section>
 
-    <div class="card-info card-board game-on">
+    <!-- Leaderboard Card -->
+    <section class="card-info card-board game-on">
       <h2 class="header-info text-center">LeaderBoard</h2>
       <table class="table table-striped leaderboard text-center">
         <thead>
@@ -127,9 +125,10 @@
           Back
         </button>
       </div>
-    </div>
+    </section>
 
-    <div class="card-info card-start">
+    <!-- Welcome Card -->
+    <section class="card-info card-start">
       <h2 class="header-info text-center">
         <span class="break">Welcome</span> <span class="break">To</span>
         <span class="break">Mount Belinda</span>
@@ -168,9 +167,10 @@
           Leaderboard
         </button>
       </div>
-    </div>
+    </section>
 
-    <div class="container-lg container-fluid header-container">
+    <!-- Main Game Screen -->
+    <header class="container-lg container-fluid header-container">
       <h1 class="header-main text-center">
         Wh<span class="blue">a</span>ck <span class="blue">A</span> W<span
           class="blue"
@@ -191,9 +191,9 @@
           <div class="box text-center scoreboard">0</div>
         </div>
       </div>
-    </div>
+    </header>
 
-    <div class="container-lg container-fluid game-container">
+    <section class="container-lg container-fluid game-container">
       <div class="row game-row">
         <div class="col"></div>
       </div>
@@ -226,8 +226,9 @@
           <div class="walrus"></div>
         </div>
       </div>
-    </div>
+    </section>
 
+    <!-- Footer -->
     <footer>
       <a href="https://www.facebook.com/PenguPengu" target="_blank">
         <i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i
