Remove testing files, Modify index.html and README.md

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-    
+
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -90,21 +90,21 @@
         <tbody>
           <tr>
             <th scope="row">
-              <img src="assets/images/gold.png" alt="1" />
+              <img src="assets/images/gold.png" alt="Gold Medal" />
             </th>
             <td class="player-name"></td>
             <td class="player-score"></td>
           </tr>
           <tr>
             <th scope="row">
-              <img src="assets/images/silver.png" alt="2" />
+              <img src="assets/images/silver.png" alt="Silver Medal" />
             </th>
             <td class="player-name"></td>
             <td class="player-score"></td>
           </tr>
           <tr>
             <th scope="row">
-              <img src="assets/images/bronze.png" alt="3" />
+              <img src="assets/images/bronze.png" alt="Bronze Medal" />
             </th>
             <td class="player-name"></td>
             <td class="player-score"></td>
@@ -194,6 +194,7 @@
       </div>
     </header>
 
+    <!-- Playing Screen -->
     <section class="container-lg container-fluid game-container">
       <div class="row game-row">
         <div class="col"></div>
@@ -244,7 +245,7 @@
         <i class="fa fa-gamepad fa-2x" aria-hidden="true"></i
       ></a>
     </footer>
-
+    
     <audio src="assets/audio/Hit-6.wav" class="whack"></audio>
 
     <script
